# fast-api-boilerplate

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
app/: router.py
docker/: Dockerfile
docker/dev/: Dockerfile
src/fast_api_boilerplate/: __init__.py
tests/: test_main.py  test_router.py
