[tool.poetry]
name = "fast-api-boilerplate"
version = "1.0.0"
description = "FastAPI Boilerplate: Kickstart your API development with FastAPI, Docker, and testing. Efficient, robust, and ready to deploy."
authors = ["Gianluca Benucci <benux9700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
fastapi = "^0.108"
uvicorn = "^0.25"
httpx = "^0.26"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
