[project]
name = "fast-api-boilerplate"
version = "2.0.0"
description = "FastAPI Boilerplate: Kickstart your API development with FastAPI, Docker, and testing. Efficient, robust, and ready to deploy."
authors = [
    { name = "Trusted97", email = "benux9700@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.5",
    "httpx>=0.27.0",
    "pytest>=8.3.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fast_api_boilerplate"]
